--- a/react2/index.html
+++ b/react2/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="" />
     <link rel="stylesheet" href="./src/style/stylesheet.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tugas 3 Muhammad Awfa Farhan</title>
+    <title>Tugas 4 Muhammad Awfa Farhan</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
